More updates with port current site to gh-pages.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,23 +3,19 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Workshop on Energy Efficent Machine Learning and Cognitive Computing for Embedded Applications -- EMC2 </title>
+  <title>EMC^2: {{ site.title }}</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css"> -->
-
   <link rel="stylesheet" href="assets/css/materialize.min.css">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
 </head>
 <body>
-  <nav class="light-blue lighten-1" role="navigation">
+  <nav class="blue-grey" role="navigation">
     <div class="nav-wrapper container">
 
       <a id="logo-container" href="#" class="brand-logo">
-        <img src="assets/images/logo-small.png" />
+        <!--<img src="assets/images/logo-small.png" />-->
+        EMC<sup>2</sup>
       </a>
 
       <ul class="right hide-on-med-and-down">
