Tweaks to headers and content sizing.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/materialize.min.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <nav class="blue-grey" role="navigation">
@@ -19,9 +20,9 @@
       </a>
 
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">CVPR'19</a></li>
-        <li><a href="#">ISCA'19</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/cvpr-19">CVPR'19</a></li>
+        <li><a href="/isca-19">ISCA'19</a></li>
         <li><a href="#">Submission</a></li>
         <li><a href="#">Committies</a></li>
         <li><a href="#">Previous Editions</li>
