Updates with submission page.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,18 @@
   <footer class="page-footer orange">
     <div class="footer-copyright">
       <div class="container">
-      Template built with <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Template built with <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>.
       </div>
     </div>
   </footer>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="assets/js/materialize.min.js"></script>
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script type="text/javascript">
-    (function($){
-      $(function(){
-        $('.sidenav').sidenav();
-      }); // end of document ready
-    })(jQuery); // end of jQuery name space
+    $(document).ready(function(){
+      $('.sidenav').sidenav();
+      $('.tabs').tabs();
+    });
   </script>
 </body>
 </html>
