--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/cvpr-19">CVPR'19</a></li>
         <li><a href="/isca-19">ISCA'19</a></li>
-        <li><a href="#">Submission</a></li>
+        <li><a href="/submission">Submission</a></li>
         <li><a href="#">Committies</a></li>
         <li><a href="#">Previous Editions</li>
       </ul>
