Updates and moved files for old editions to new folder.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,8 +24,8 @@
         <li><a href="/cvpr-19">CVPR'19</a></li>
         <li><a href="/isca-19">ISCA'19</a></li>
         <li><a href="/submission">Submission</a></li>
-        <li><a href="#">Committies</a></li>
-        <li><a href="#">Previous Editions</li>
+        <li><a href="/program-committee">Committies</a></li>
+        <li><a href="/previous-editions">Previous Editions</li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
