More edition template settings.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,9 @@
   <title>EMC^2: {{ site.title }}</title>
 
   <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/materialize.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/materialize.min.css">
 </head>
 <body>
   <nav class="blue-grey" role="navigation">
