--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -4,9 +4,13 @@
     <div class="section">
         <div class="row">
             <div class="col s12 center-align">
-                <h4>The {{page.edition_number }} {{ site.title }}</h4>
-                <img src="{{ page.header_image }}" class="responsive-img" />
-                <h5>Co-located with the {{ page.colocated_long }} ({{ page.colocated_short }})</h5>
+                <h3>The {{page.edition_number }} {{ site.title }}</h3>
+                <img src="{{ page.header_image }}" class="responsive-img" style="max-height: 300px;" />
+                <h5>Co-located with the {{ page.colocated_long }} (<a href="{{ page.colocated_url }}" target="_blank">{{ page.colocated_short }}</a>)</h5>
+            </div>
+            <div class="col s12 right-align">
+                <h5>{{ page.event_date }}</h5>
+                <h5>{{ page.event_location }}</h5>
             </div>
             <div class="col s12">
                 <h5>Program</h5>
