Styling updates and more properties.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
-  <footer class="page-footer orange">
+  <footer class="page-footer blue-grey">
     <div class="footer-copyright">
       <div class="container">
-      Template built with <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>.
+        Template built with <a class="blue-grey text-lighten-3" href="http://materializecss.com" target="_blank">Materialize</a>.
       </div>
     </div>
   </footer>
