--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
   <title>EMC^2: {{ site.title }}</title>
 
   <!-- CSS  -->
@@ -10,30 +11,25 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/materialize.min.css">
 </head>
+
 <body>
-  <nav class="blue-grey" role="navigation">
-    <div class="nav-wrapper container">
+  <header>
+    <nav class="blue-grey" role="navigation">
+      <div class="nav-wrapper container">
 
-      <a id="logo-container" href="#" class="brand-logo">
-        <!--<img src="assets/images/logo-small.png" />-->
-        EMC<sup>2</sup>
-      </a>
+        <a id="logo-container" href="/" class="brand-logo">
+          <!--<img src="assets/images/logo-small.png" />-->
+          EMC<sup>2</sup>
+        </a>
 
-      <ul class="right hide-on-med-and-down">
-        <li><a href="/">Home</a></li>
-        <li><a href="/cvpr-19">CVPR'19</a></li>
-        <li><a href="/isca-19">ISCA'19</a></li>
-        <li><a href="/submission">Submission</a></li>
-        <li><a href="/program-committee">Committies</a></li>
-        <li><a href="/previous-editions">Previous Editions</li>
-      </ul>
+        <ul class="right hide-on-med-and-down">
+          {% include nav-links.html %}
+        </ul>
 
-      <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
-
-
-
+        <ul id="nav-mobile" class="sidenav">
+          {% include nav-links.html %}
+        </ul>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+  </header>
