--- a/_includes/submission_guidelines_default.html
+++ b/_includes/submission_guidelines_default.html
@@ -3,11 +3,12 @@
         cognitive computing, reflect on trends in the community, or present anything interesting and worth
         exploring as a direction.</li>
     <li>Papers <em>MUST</em> be submitted in printable PDF format.</li>
-    <li>Papers <em>MUST</em> use the formatting guidelines for SIGPLAN conferences.</li>
+    <li>Papers <em>MUST</em> use the <a href="http://www.google.com/url?q=http%3A%2F%2Fwww.sigplan.org%2FResources%2FAuthor%2F&sa=D&sntz=1&usg=AFQjCNEfT-oLcvlS7z1DCpLyJoVISFs6XA">formatting guidelines for SIGPLAN conferences</a>.</li>
     <li>Papers <em>MUST NOT</em> exceed 5 pages including references.</li>
     <li>Text must be in no smaller than 10pt font size.</li>
     <li>Review is single-blind, so please include authors’ names and affiliations on the submitted PDF.</li>
     <li>All accepted papers will be posted to workshop website for download.</li>
     <li>Accepted papers will be presented in short talk sessions at the workshop.</li>
     <li>Authors are encouraged to provide artifacts to be included with their final papers.</li>
+    <li>If you have any issues, please email the publication and submission chairs Satyam Srivastava (<a href="mailto:satyam.srivastava@intel.com">satyam.srivastava@intel.com</a>) and Tao Sheng (<a href="mailto:tsheng@amazon.com">tsheng@amazon.com</a></li>
 </ul>
