--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,13 @@
 {% include header.html %}
 
+<main>
   <div class="container">
     <div class="section">
       {{ content }} 
     </div>
     <br/><br/>
   </div>
- 
+</main>
+
 {% include footer.html %}
 
