--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -1,5 +1,6 @@
 {% include header.html %}
 
+<main>
 <div class="container">
     <div class="section">
         <div class="row">
@@ -23,5 +24,6 @@
     </div>
     <br /><br />
 </div>
+</main>
 
 {% include footer.html %}
