Tweaks to styles.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,9 +7,9 @@
   <title>EMC^2: {{ site.title }}</title>
 
   <!-- CSS  -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/materialize.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="assets/css/materialize.min.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
