--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,23 +12,11 @@ main {
     font-weight: 300;
     color: #607d8b;
 }
-/*
-ul.list {
-    margin: 0;
-    padding: 0;
-}
 
-ul.list li::before {
-    content: 'keyboard_arrow_right';
-    font-family: "Material Icons";
-
-    font-weight:bold;
-    font-size:18px;
-    text-align:right;
-    padding-right:6px;
-    
-    position: relative;
-    left: 0;
-    top: 0.18em;
+img.avatar-image {
+    object-fit: cover;
+    border-radius:50%;
+    width: 170px;
+    height: 170px;
+    margin: 20px;
 }
-*/
