--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <nav class="blue-grey" role="navigation">
+    <nav class="blue-grey darken-4" role="navigation">
       <div class="nav-wrapper container">
 
         <a id="logo-container" href="/" class="brand-logo">
