--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,13 @@ main {
 
 .header {
     font-weight: 300;
-    color: #607d8b;
+    /*color: #607d8b;*/
+    color: #005E93;
 }
 
 img.avatar-image {
     object-fit: cover;
-    border-radius:50%;
+    border-radius: 50%;
     width: 170px;
     height: 170px;
     margin: 20px;
