--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -11,31 +11,20 @@
                             target="_blank">{{ page.colocated_short }}</a>)</h5>
                 </div>
                 <div class="col s12 right-align">
-                    <h5>{{ page.event_date }}</h5>
-                    <h5>{{ page.event_location }}</h5>
+                    <h6 class="dark-primary">{{ page.event_date }}</h6>
+                    <h6 class="light-primary">{{ page.event_location }}</h6>
                 </div>
             </div>
-            {% assign program = site.programs | where: "edition",page.edition | sort: "time_start" %}
+            {% assign program = site.programs | where: "edition",page.edition | sort: "time_end" %}
             {% assign program_size = program|size %}
-            {% if program_size > 0 %}
-            <div class="row">
-                <div class="col s12">
-                    <h3 class="header">Program</h3>
-                </div>
-            </div>
-            {% endif %}
-            {% assign keynote_counter = 0 %}
-            {% assign invited_talk_counter = 0 %}
             {% assign paper_session_counter = 0 %}
             {% assign talk_class_header = "" %}
             {% for p in program %}
                 {% case p.type %}
                     {% when 'keynote' %}
-                        {% assign keynote_counter = keynote_counter|plus:1 %}
-                        {% assign talk_class_header = "Keynote #"|append:keynote_counter %}
+                        {% assign talk_class_header = "Keynote" %}
                     {% when 'invited_talk' %}
-                        {% assign invited_talk_counter = invited_talk_counter|plus:1 %}
-                        {% assign talk_class_header = "Invited Talk #"|append:invited_talk_counter %}
+                        {% assign talk_class_header = "Invited Talk" %}
                     {% when 'paper_session' %}
                         {% assign paper_session_counter = paper_session_counter|plus:1 %}
                         {% assign talk_class_header = "Paper Session #"|append:paper_session_counter %}
@@ -55,32 +44,34 @@
 
                 <div class="row">
                     <div class="col s3">
-                        <h5 class="header">
+                        <h6 class="dark-primary">
                             {{ talk_class_header }} 
-                        </h5>
-                        <h6 class="header">{{ p.time_start|date: "%H:%M" }} - {{ p.time_end|date: '%H:%M' }}</h6>
+                        </h6>
+                        <h6 class="light-primary">{{ p.time_start|date: "%H:%M" }} - {{ p.time_end|date: '%H:%M' }}</h6>
                         {% if p.type == "keynote" or p.type == "invited_talk" %}
                         <img src="assets/images/speakers/{{ p.edition }}/{{ p.speaker.avatar }}"
                         class="z-depth-1 responsive-img valign-wrapper avatar-image valign-wrapper center-align" />
                         {% endif %}
                     </div>
                     <div class="col s9">
-                        {% if p.type == "keynote" or p.type == "invited_talk" %}
-                            <h5 class="header">{{ p.title }}</h5>
-                            <h6 class="header">{{ p.speaker.name }}, {{ p.speaker.affiliation }}</h6>
-                        {% endif %}
-                        {% if p.type == "paper_session" %}
+                        {% if p.type == "welcome" or p.type == "coffee_break" or p.type == "lunch_break" %}
+                            <h5 class="dark-primary">{{ p.title }}</h5>
+                        {% elsif p.type == "keynote" or p.type == "invited_talk" %}
+                            <h5 class="dark-primary">{{ p.title }}</h5>
+                            <h6 class="light-primary">{{ p.speaker.name }}, {{ p.speaker.affiliation }}</h6>
+                            <div class="program-item-content">
+                                {{ p.content | markdownify }}
+                            </div>
+                        {% elsif p.type == "paper_session" %}
                             {% for paper in p.papers %}
-                                <h5 class="header">{{ paper.title }}</h5>
-                                <h6 class="header">{{ paper.authors }}</h6>
-                                <h6 class="header">{{ paper.affiliation }}</h6>
+                                <h5 class="dark-primary">{{ paper.title }}</h5>
+                                <h6 class="light-primary">{{ paper.authors }}</h6>
+                                <h6 class="secondary-text">{{ paper.affiliation }}</h6>
                             {% endfor %}
                         {% endif %}
-                        <p>{{ p.content | markdownify }}</p>
                     </div>
                 </div>
             {% endfor %}
-            {{ content }}
         </div>
     </div>
 </main>
