--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -15,6 +15,8 @@
                     <h6 class="light-primary">{{ page.event_location }}</h6>
                 </div>
             </div>
+        </div>
+        <div class="section program">
             {% assign program = site.programs | where: "edition",page.edition | sort: "time_end" %}
             {% assign program_size = program|size %}
             {% assign paper_session_counter = 0 %}
@@ -29,7 +31,7 @@
                         {% assign paper_session_counter = paper_session_counter|plus:1 %}
                         {% assign talk_class_header = "Paper Session #"|append:paper_session_counter %}
                     {% when 'program_note' %}
-                        {% assign talk_class_header = "Program Note" %}
+                        {% assign talk_class_header = "Note" %}
                     {% when 'welcome' %}
                         {% assign talk_class_header = "Welcome" %}
                     {% when 'close' %}
@@ -37,36 +39,38 @@
                     {% when 'coffee_break' %}
                         {% assign talk_class_header = "Break" %}
                     {% when 'lunch_break' %}
-                        {% assign talk_class_header = "Lunch Break" %}
+                        {% assign talk_class_header = "Lunch" %}
                     {% else %}
                         {% assign talk_class_header = "" %}
                 {% endcase %}
 
-                <div class="row">
-                    <div class="col s3">
-                        <h6 class="dark-primary">
-                            {{ talk_class_header }} 
-                        </h6>
-                        <h6 class="light-primary">{{ p.time_start|date: "%H:%M" }} - {{ p.time_end|date: '%H:%M' }}</h6>
+                <div class="flex row program-item">
+                    <div class="col s3 program-item-side-content">
+                        <h1 class="talk-class-header dark-primary">{{ talk_class_header }}</h1>
+                        <h1 class="time dark-primary">
+                            {{ p.time_start|date: "%H:%M" }} - {{ p.time_end|date: "%H:%M" }}
+                        </h1>
                         {% if p.type == "keynote" or p.type == "invited_talk" %}
-                        <img src="assets/images/speakers/{{ p.edition }}/{{ p.speaker.avatar }}"
-                        class="z-depth-1 responsive-img valign-wrapper avatar-image valign-wrapper center-align" />
+                            {% if p.speaker.avatar %}
+                                <br/>
+                                <img src="assets/images/speakers/{{ p.edition }}/{{ p.speaker.avatar }}"
+                                class="z-depth-1  valign-wrapper avatar-image center-align" />
+                            {% endif %}
                         {% endif %}
                     </div>
-                    <div class="col s9">
+                    <div class="col s9 program-item-content">
                         {% if p.type == "welcome" or p.type == "coffee_break" or p.type == "lunch_break" %}
                             <h5 class="dark-primary">{{ p.title }}</h5>
                         {% elsif p.type == "keynote" or p.type == "invited_talk" %}
                             <h5 class="dark-primary">{{ p.title }}</h5>
                             <h6 class="light-primary">{{ p.speaker.name }}, {{ p.speaker.affiliation }}</h6>
-                            <div class="program-item-content">
-                                {{ p.content | markdownify }}
-                            </div>
+                            {{ p.content | markdownify }}
                         {% elsif p.type == "paper_session" %}
                             {% for paper in p.papers %}
                                 <h5 class="dark-primary">{{ paper.title }}</h5>
                                 <h6 class="light-primary">{{ paper.authors }}</h6>
                                 <h6 class="secondary-text">{{ paper.affiliation }}</h6>
+                                <br/>
                             {% endfor %}
                         {% endif %}
                     </div>
