--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,17 @@ main {
     flex: 1 0 auto;
 }
 
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .header {
     font-weight: 300;
     color: #005E93;
 }
 
+/* Additional Text Colors */
 .dark-primary {
     color: #1976D2 !important;
 }
@@ -34,16 +40,63 @@ main {
 .primary-text {
     color: #212121 !important;
 }
-.program-item-content > h1 {
-    color: #ff5722;
-    font-size: 1em;
-    margin: 2em 0 0 0;
-    font-weight: bold;
-    text-transform: capitalize;
+
+/* Program Content */
+.program {
+    
 }
 
-.program-item-content > p {
+.program-item {
+    margin-bottom: 2em;
+    padding-bottom: 2em;
+    border-bottom: #bdbdbd 1px solid;
+}
+
+.program-item:last-child {
+    border: none;
+}
+
+.program-item-content {
     margin: 0;
+    padding: 0;
+}
+
+.program-item-content > h5 {
+    margin-top: 0;
+    font-weight: 300;
+}
+
+.program-item-content-paper {
+    margin-bottom: 2em;
+}
+
+.program-item-content-paper:last-child {
+    margin-bottom: 0;
+}
+
+.program-item-side-content > .time {
+    margin-top: 0;
+    margin-right: 24px;
+    margin-bottom: 0;
+    font-size: 24px;
+    text-align: right;
+}
+
+.program-item-side-content > .talk-class-header {
+    margin-top: 0;
+    margin-right: 24px;
+    margin-bottom: 8px;
+    font-size: 20px;
+    text-align: right;
+}
+
+.program-item-side-content > img.avatar-image {
+    object-fit: cover;
+    border-radius: 50%;
+    width: 130px;
+    height: 130px;
+    margin-right: 24px;
+    float: right;
 }
 
 img.avatar-image {
