--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,21 @@ main {
     font-weight: 300;
 }
 
+.program-item-content ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px
+}
+
+.program-item-content ul>li {
+    display: list-item;
+    list-style-type: disc;
+}
+
 .program-item-content-paper {
     margin-bottom: 2em;
 }
