Major overhaul of the editions template. Hope is that its more responsive for mobile.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,10 @@
 
   <!-- CSS  -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" />
   <link rel="stylesheet" href="assets/css/materialize.min.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/edition.css" />
 </head>
 
 <body>
