--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,89 @@
+html {
+    font-size: 16px;
+}
+
 body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1.45;
+    color: #333;
 }
 
 main {
     flex: 1 0 auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    margin: 2.75rem 0 1rem;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    line-height: 1.15;
+}
+
+h1 {
+    margin-top: 0;
+    font-size: 1.802em;
+}
+
+h2 {
+    font-size: 1.602em;
+}
+
+h3 {
+    font-size: 1.424em;
+}
+
+h4 {
+    font-size: 1.266em;
+}
+
+h5 {
+    font-size: 1.125em;
+}
+
+h6 {
+    font-size: 1.0em;
+}
+
+small,
+.text_small {
+    font-size: 0.889em;
+}
+
+@media screen and (min-width: 768px) {
+    h1, h2, h3, h4, h5 {
+        margin: 2.75rem 0 1rem;
+        font-family: 'Poppins', sans-serif;
+        font-weight: 400;
+        line-height: 1.15;
+      }
+      
+      h1 {
+        margin-top: 0;
+        font-size: 2.488em;
+      }
+      
+      h2 {font-size: 2.074em;}
+      
+      h3 {font-size: 1.728em;}
+      
+      h4 {font-size: 1.44em;}
+      
+      h5 {font-size: 1.2em;}
+      
+      h6 {font-size: 1.0em;}
+
+      small, .text_small {font-size: 0.833em;}
+}
+
+strong {
+    font-weight: bolder !important;
 }
 
 .flex {
@@ -18,151 +96,31 @@ main {
     color: #005E93;
 }
 
+
 /* Additional Text Colors */
+
 .dark-primary {
     color: #1976D2 !important;
 }
+
 .light-primary {
     color: #6f9fc7 !important;
 }
+
 .primary {
     color: #2196f3 !important;
 }
+
 .accent-text {
     color: #ff5722 !important;
 }
+
 .secondary-text {
     color: #757575 !important;
 }
+
 .primary-text {
     color: #303030 !important;
-}
-
-/* Program Header */
-.program-header {
-    
-}
-
-.program-header h1 {
-    font-size: 46px;
-    margin-bottom: 26px;
-    margin-top: 0;
-}
-
-.program-header h2 {
-    font-size: 30px;
-    margin-bottom: 0;
-    margin-top: 26px;
-}
-
-.program-header h3 {
-    font-size: 22px;
-    margin-bottom: 8px;
-    margin-top: 0;
-}
-
-.program-separator {
-    margin: 20px 0 80px 0;
-}
-
-/* Program Content */
-.program-container {
-    width: 95%;
-    max-width: 1440px;
-    margin: 0 auto;
-}
-
-.program {
-    
-}
-
-.program-item {
-    margin-bottom: 2em;
-    padding-bottom: 2em;
-    border-bottom: #bdbdbd 1px solid;
-}
-
-.program-item:last-child {
-    border: none;
-}
-
-.program-item-content {
-    margin: 0;
-    padding: 0;
-    color: #303030 !important;
-}
-
-.program-item-content h1 {
-    font-size: 26px;
-    margin-top: 0;
-    margin-bottom: 10px;
-    font-weight: 200;
-}
-
-.program-item-content h2 {
-    font-size: 20px;
-    margin: 0;
-    margin-bottom: 10px;
-    font-weight: 100;
-}
-
-.program-item-content h3 {
-    font-size: 18px;
-    margin: 0;
-    margin-bottom: 10px;
-    font-weight: 200;
-}
-
-.program-item-content p {
-    line-height: 1.5em;
-}
-
-.program-item-content ul {
-    display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px
-}
-
-.program-item-content ul>li {
-    display: list-item;
-    list-style-type: disc;
-}
-
-.program-item-content-paper {
-    margin-bottom: 2em;
-    font-size: 75%;
-}
-
-.program-item-content-paper:last-child {
-    margin-bottom: 0;
-}
-
-.program-item-side-content .time {
-    margin-top: 0;
-    margin-right: 24px;
-    margin-bottom: 10px;
-    font-size: 24px;
-    text-align: right;
-}
-
-.program-item-side-content > .talk-class-header {
-    margin-top: 0;
-    margin-right: 24px;
-    font-size: 20px;
-    text-align: right;
-}
-
-.program-item-side-content > img.avatar-image {
-    object-fit: cover;
-    border-radius: 50%;
-    width: 130px;
-    height: 130px;
-    margin-right: 24px;
-    float: right;
 }
 
 img.avatar-image {
