--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ small,
 @media screen and (min-width: 768px) {
     h1, h2, h3, h4, h5 {
         margin: 2.75rem 0 1rem;
-        font-family: 'Poppins', sans-serif;
+        font-family: 'Roboto', sans-serif;
         font-weight: 400;
         line-height: 1.15;
       }
